[package]
name = "lan-play"
version = "0.1.0"
authors = ["spacemeowx2 <spacemeowx2@gmail.com>"]
edition = "2018"

[dependencies]
tokio = "=0.2.0-alpha.5"
tokio-net = "=0.2.0-alpha.5"
rawsock = "0.3"
crossbeam-utils = "0.6"
env_logger = { version = "0.4", default-features = false, features = [] }
log = "0.4"
# hyper = "0.12"
futures-preview = "=0.3.0-alpha.18"
mio = "0.6"
cfg-if = "0.1"

[dependencies.smoltcp]
# version = "0.5.0"
git = "https://github.com/switch-lan-play/smoltcp.git"
branch = "accept-all-v0.5.0"
default-features = false
features = [
    "std", "log",
    "proto-ipv4", "proto-ipv6",
    "socket-tcp", "socket-udp", "socket-icmp",
    "verbose",
    "socket-accept-all", "arp-fake-subnet"
]

# [patch.'https://github.com/switch-lan-play/smoltcp.git'.smoltcp]
# path = '../smoltcp'

[patch.crates-io.rawsock]
git = "https://github.com/spacemeowx2/rust-rawsock.git"
branch = "feature-filter"


[target.'cfg(windows)'.dependencies]
libc = "0.2"

[target.'cfg(unix)'.dependencies]
nix = "0.15"

[profile.release]
opt-level = "z"
debug = false
rpath = false
lto = true
debug-assertions = false
panic = "abort"
