[workspace]

members = [
  "lan-play",
]

[patch.'https://github.com/switch-lan-play/smoltcp.git'.smoltcp]
path = '../smoltcp'

[patch.crates-io.rawsock]
git = "https://github.com/spacemeowx2/rust-rawsock.git"
branch = "feature-filter"

[profile.release]
opt-level = "z"
debug = false
rpath = false
lto = true
debug-assertions = false
panic = "abort"
