[package]
name = "lan-play"
version = "0.1.0"
authors = ["spacemeowx2 <spacemeowx2@gmail.com>"]
edition = "2018"

[dependencies]
bytes = "0.5"
tokio = { version = "0.2.21", features = ["full"] }
futures = "0.3.5"
rawsock = { version = "0.3", path = "../rawsock" }
crossbeam-utils = "0.6"
env_logger = "0.7"
log = "0.4"
cfg-if = "0.1"
lazy_static = "1.4.0"
async-trait = "0.1"
structopt = "0.3"
dotenv = "0.15"
anyhow = "1.0"
thiserror = "1.0"
async-socks5 = "0.3.1"

[dependencies.smoltcp]
# version = "0.5.0"
git = "https://github.com/switch-lan-play/smoltcp.git"
branch = "accept-all-0.6.0"
default-features = false
features = [
    "std", "log",
    "ethernet",
    "proto-ipv4", "proto-ipv6",
    "socket-tcp", "socket-raw", "socket-icmp",
    "verbose",
    "socket-accept-all", "arp-fake-subnet"
]

[dev-dependencies]
fast-socks5 = "0.3.1"
async-std = "1"

[target.'cfg(windows)'.dependencies]
libc = "0.2"

[target.'cfg(unix)'.dependencies]
nix = "0.15"
