[package]
name = "lan-play"
version = "0.1.0"
authors = ["spacemeowx2 <spacemeowx2@gmail.com>"]
edition = "2018"

[dependencies]
async-std = { version = "1.6", features = ["attributes", "unstable"], optional = true }
async-channel = "1.4.0"
futures = "0.3.5"
rawsock = { version = "0.3", path = "../rawsock" }
env_logger = { version = "0.7", default-features = false, features = [ "termcolor", "atty", "humantime" ] }
log = { version = "0.4", features = ["release_max_level_debug"] }
cfg-if = "0.1"
lazy_static = "1.4.0"
async-trait = "0.1"
structopt = "0.3"
dotenv = "0.15"
anyhow = "1.0"
thiserror = "1.0"
async-socks5 = { version = "0.4.0", optional = true }
lru = "0.6"
drop-abort = "0.1"
url = "2.1"
dns-parser = "0.8"
shadowsocks-rust = { version = "1.8.23", optional = true }
base64 = { version = "0.12.3", optional = true }
async-timeout = "0.2.0"
logging-allocator = { version = "0.1.1", optional = true }

[dependencies.tokio]
version = "0.3.4"
features = ["fs", "io-util", "io-std", "macros", "net", "parking_lot", "process", "rt", "signal", "stream", "sync", "time"]

[features]
default = [ "socks5" ]
shadowsocks = [ "shadowsocks-rust", "base64" ]
socks5 = [ "async-socks5" ]
mt_executor = ["tokio/rt-multi-thread"]

[dependencies.smoltcp]
# version = "0.5.0"
git = "https://github.com/switch-lan-play/smoltcp.git"
branch = "accept-all-0.6.0"
default-features = false
features = [
    "std", "log",
    "ethernet",
    "proto-ipv4", "proto-ipv6",
    "socket-tcp", "socket-raw", "socket-icmp",
    "verbose",
    "socket-accept-all", "arp-fake-subnet"
]

[dev-dependencies]
fast-socks5 = "0.3.1"
async-std = "1"

[target.'cfg(windows)'.dependencies]
libc = "0.2"

[target.'cfg(unix)'.dependencies]
nix = "0.18.0"
